// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test wallets with price 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#DADADA",
              "borderRadius": 7,
              "borderWidth": 0.8,
              "marginTop": 17,
              "opacity": 1,
              "paddingBottom": 13,
              "paddingLeft": 25,
              "paddingRight": 25,
              "paddingTop": 7,
              "width": "95%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          >
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                total_title
              </Text>
            </View>
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "right",
                    },
                  ]
                }
              >
                $
                300786
              </Text>
            </View>
            <BVLinearGradient
              colors={
                Array [
                  4293263482,
                  4282600564,
                ]
              }
              endPoint={
                Object {
                  "x": 0.1014142945482835,
                  "y": 0,
                }
              }
              locations={
                Array [
                  1,
                  1,
                ]
              }
              startPoint={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "borderRadius": 20,
                  "borderWidth": 0,
                  "height": 10,
                  "marginTop": 5,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 30,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/dot.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          123
                           
                          DOT
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          15252
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Polkadot wallet
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/kusama.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          321
                           
                          KSM
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          135141
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Kusama wallet
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/dot.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          123
                           
                          DOT
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          15252
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Polkadot staking
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/kusama.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          321
                           
                          KSM
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          135141
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Kusama staking
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Test wallets without price 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#DADADA",
              "borderRadius": 7,
              "borderWidth": 0.8,
              "marginTop": 17,
              "opacity": 1,
              "paddingBottom": 13,
              "paddingLeft": 25,
              "paddingRight": 25,
              "paddingTop": 7,
              "width": "95%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          >
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "left",
                    },
                  ]
                }
              >
                total_title
              </Text>
            </View>
            <View
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "lineHeight": 18,
                    },
                    Object {
                      "textAlign": "right",
                    },
                  ]
                }
              >
                $
                0
              </Text>
            </View>
            <BVLinearGradient
              colors={
                Array [
                  4291611852,
                  4291611852,
                ]
              }
              endPoint={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              locations={
                Array [
                  1,
                  1,
                ]
              }
              startPoint={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "borderRadius": 20,
                  "borderWidth": 0,
                  "height": 10,
                  "marginTop": 5,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "marginTop": 30,
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/dot.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          123
                           
                          DOT
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          0
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Polkadot wallet
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/kusama.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          321
                           
                          KSM
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          0
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Kusama wallet
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/dot.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          123
                           
                          DOT
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          0
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Polkadot staking
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <View
                style={
                  Array [
                    Object {
                      "height": 50,
                      "marginBottom": 10,
                      "marginTop": 10,
                    },
                    Object {
                      "paddingLeft": "5%",
                      "width": "95%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "row",
                    }
                  }
                >
                  <Image
                    source={
                      Object {
                        "testUri": "../../../assets/img/kusama.png",
                      }
                    }
                    style={
                      Object {
                        "borderColor": "black",
                        "borderRadius": 25,
                        "borderWidth": 0.8,
                        "height": 50,
                        "overflow": "hidden",
                        "width": 50,
                      }
                    }
                  />
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                        "marginLeft": 20,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 25,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "left",
                              },
                            ]
                          }
                        >
                          321
                           
                          KSM
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "black",
                                "fontFamily": "Roboto-Bold",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "lineHeight": 18,
                              },
                              Object {
                                "textAlign": "right",
                              },
                            ]
                          }
                        >
                          $
                          0
                        </Text>
                      </View>
                    </View>
                    <Text
                      style={
                        Object {
                          "color": "black",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 15,
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                          "lineHeight": 18,
                        }
                      }
                    >
                      Kusama staking
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
